objects/DL_VC__VC_Value_Proposition_Group__c.object
<CustomObject>
    <fields>
        <fullName>DL_VC__VPG_Benefits_Per_Transaction__c</fullName>
        <label>Benefits Per Transaction</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DL_VC__VPG_Cost_of_Delay__c</fullName>
        <label>Cost of Delay</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DL_VC__VPG_NPV__c</fullName>
        <label>NPV</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DL_VC__VPG_Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Value Proposition Groups</relationshipLabel>
        <relationshipName>Value_Proposition_Groups</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DL_VC__VPG_Payback__c</fullName>
        <label>Payback</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DL_VC__VPG_ROI__c</fullName>
        <label>ROI</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DL_VC__VPG_Status_Id__c</fullName>
        <label>Status Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DL_VC__VPG_Status__c</fullName>
        <label>Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DL_VC__VPG_TCO__c</fullName>
        <label>TCO</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DL_VC__VPG_Term__c</fullName>
        <label>Term</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DL_VC__VPG_Total_Benefits__c</fullName>
        <label>Total Benefits</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DL_VC__VPG_Total_Costs__c</fullName>
        <label>Total Costs</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DL_VC__Value_Prop_Group_Id__c</fullName>
        <externalId>true</externalId>
        <label>Value Proposition Group Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Value Proposition Group</label>
    <nameField>
        <label>Value Proposition Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Value Proposition Groups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>